Removed z-index=-1 for .center Fixed up date-me float image for mobile.

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -237,10 +237,6 @@ hr.desktop-only {
   }
 }
 
-.center {
-  z-index: -1;
-}
-
 input[type="checkbox"] {
   transform: translateY(2px);
   color: var(--secondary);
